// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandidateRow snapshot > renders artifact_evidence auto-applied row without manual controls 1`] = `
<article
  class="flex flex-col gap-2 rounded-md border border-slate-200 bg-white p-3"
  data-candidate-id="ghi-321"
  data-confidence="high"
  data-reason="artifact_evidence"
  data-status="auto_applied"
  data-testid="candidate-row"
>
  <header
    class="flex items-center gap-2"
  >
    <span
      class="text-sm font-medium text-slate-700"
      data-testid="reason-label"
    >
      Artifact evidence
    </span>
    <span
      class="rounded-full bg-slate-100 px-2 py-0.5 font-mono text-xs uppercase text-slate-600"
      data-level="high"
      data-testid="confidence-badge"
    >
      high
    </span>
  </header>
  <div
    class="text-sm"
    data-testid="artifact"
  >
    <a
      class="text-blue-600 underline hover:text-blue-700"
      href="https://github.com/owner/repo/pull/9"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://github.com/owner/repo/pull/9
    </a>
  </div>
  <div
    class="flex items-center gap-2 text-xs text-slate-500"
    data-testid="meta"
  >
    <time
      datetime="2026-05-20T00:00:00Z"
    >
      2026-05-20T00:00:00Z
    </time>
    <span
      data-testid="status"
    >
      auto_applied
    </span>
  </div>
</article>
`;

exports[`CandidateRow snapshot > renders pr_merged_fuzzy reason with medium confidence and manual-accept controls 1`] = `
<article
  class="flex flex-col gap-2 rounded-md border border-slate-200 bg-white p-3"
  data-candidate-id="abc-123"
  data-confidence="medium"
  data-reason="pr_merged_fuzzy"
  data-status="pending"
  data-testid="candidate-row"
>
  <header
    class="flex items-center gap-2"
  >
    <span
      class="text-sm font-medium text-slate-700"
      data-testid="reason-label"
    >
      PR merged (fuzzy match)
    </span>
    <span
      class="rounded-full bg-slate-100 px-2 py-0.5 font-mono text-xs uppercase text-slate-600"
      data-level="medium"
      data-testid="confidence-badge"
    >
      medium
    </span>
  </header>
  <div
    class="text-sm"
    data-testid="artifact"
  >
    <a
      class="text-blue-600 underline hover:text-blue-700"
      href="https://github.com/owner/repo/pull/123"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://github.com/owner/repo/pull/123
    </a>
  </div>
  <div
    class="flex items-center gap-2 text-xs text-slate-500"
    data-testid="meta"
  >
    <time
      datetime="2026-05-20T00:00:00Z"
    >
      2026-05-20T00:00:00Z
    </time>
    <span
      data-testid="status"
    >
      pending
    </span>
  </div>
  <div
    class="flex gap-2"
    data-testid="actions"
  >
    <button
      aria-label="Accept candidate"
      class="rounded bg-emerald-600 px-2 py-1 text-xs font-medium text-white hover:bg-emerald-700"
      type="button"
    >
      Accept
    </button>
    <button
      aria-label="Reject candidate"
      class="rounded bg-slate-200 px-2 py-1 text-xs font-medium text-slate-700 hover:bg-slate-300"
      type="button"
    >
      Reject
    </button>
  </div>
</article>
`;
